# sentient-brain

./: .gitignore  README.md  TESTING_SUCCESS_REPORT_2025.md  docker-compose.weaviate.yml  failure_prevention_test_results_2025.json  package-lock.json  package.json  quicksort.js  requirements.txt  test_failure_prevention_2025.py  validate_system_2025.py
.cursor/rules/: architectural-planner.md  context-7.md  design-rules.md  desktop-commander.mdc  development-ready-to-use-ui-components-avoid-style-conflict.md  development-ready-to-use-ui-components-workflow.md  development-ready-to-use-ui-components.md  hyper-browser.md  image-generation.md  marketing-manager.md  product-page-development.md  ready-made-reusable-ui-components-creation.md  ready-made-ui-component-resuable-structure.md  ready-made-ui-component-reuseable-avoid-conflict.md  relational-context-graph-knowledge.md  styling-with-tailwind-css.md  tailwind-css-shadcn-ui.md  task-manager.md  tool-box.md  use-firecrawl-mcp-server.md  use-mcp-hyperbrowser.md  vietnamese-typography-rules.md
Guide-1/: mcp_agent_interaction_workflows_and_api_specifications.md  mcp_hybrid_database_schema_architecture.md  mcp_server_architecture_and_database_integration_strategy.md  mcp_server_restful_api_specification_v1_0.md
docs/: 00_final_architectural_recommendations.md  00_master_architectural_blueprint.md  01_unified_architecture_sentient_brain.md  01_unified_synthesis_and_architecture.md  neo4j_and_weaviate_hybrid.md  sample-build-weaviate-and-neo4j.md  upgrade-to-google-gen-ai-sdk.md
docs/Archon/: analysis-of-dependencies.md
docs/Production-Ready-MCP-Server-Development-Plan Weaviate-Centric Architecture with Google Gemini 2.5 Flash Lite/: action-plan.md  development-plan.md  suggestion-for-multidb-implementation.md
docs/build-with-smithery/: build-smither-overview.md  build-smithery-typescript.md  build-with-waveviat-graph-search.md
docs/mcp-crawl4ai-rag/: 02_deep_analysis_and_patterns.md
docs/surrealdb/: 01_architecture.md
docs/task-breakdown/: 2025-06-22_progress_and_plan.md  goal1_code_memory_layer_spec.md
mcp_server/: .env.example  alembic.ini  main.py
mcp_server/alembic/: env.py
mcp_server/alembic/versions/: 04bfafd4a7cf_add_projects_table_and_link_to_code_.py  331faed22244_create_code_files_table.py
mcp_server/api/: code_indexer_router.py
mcp_server/core/: config.py
mcp_server/database/: database.py
mcp_server/database/models/: code_indexing_models.py  project_models.py
mcp_server/models/: code_indexing_schemas.py  project_schemas.py
mcp_server/services/: code_indexing_service.py  file_watcher_service.py
ollama_data/: id_ed25519  id_ed25519.pub
sentient-brain-py-server/: .env.example  Dockerfile  docker-compose.yml  requirements.txt  test-typescript-sample.ts
sentient-brain-py-server/ollama_data/: id_ed25519  id_ed25519.pub
sentient-brain-py-server/src/: main.py  test_event.py
sentient-brain-py-server/src/cli/: process_file.py
sentient-brain-py-server/src/config/: domains.yml
sentient-brain-py-server/src/core/: config.py
sentient-brain-py-server/src/db/: neo4j_driver.py  weaviate_client.py
sentient-brain-py-server/src/embedding/: embedder.py  gemini.py  local_hf.py
sentient-brain-py-server/src/generative/: gemini_model.py
sentient-brain-py-server/src/helpers/: dummy.py
sentient-brain-py-server/src/models/: document_models.py  graph_models.py
sentient-brain-py-server/src/parsers/: base.py  python_parser.py  registry.py  typescript_parser.py
sentient-brain-py-server/src/services/: code_graph_service.py  file_watcher.py  groq_agentic_service.py  ingestion_service.py  metadata_extractor.py  neo4j_service.py  weaviate_inspector.py  weaviate_service.py
sentient-brain-py-server/tests/: test_api.py
sentient-brain-surreal/: .env.example  Dockerfile  README.md  SMITHERY_DEPLOYMENT.md  admin_ui.py  deploy_smithery.py  deployment_report_1750594594.json  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  smithery.json  smithery.yaml  test_report_20250622_181355.json  test_runner.py
sentient-brain-surreal/docs/: 01_architecture.md  02_schema.sql  03_agent_templates.md  04_memory_layers.md  05-improve-prevent-fail-coding.md  06-failure-prevention-implementation.md  implementation-guide.md
sentient-brain-surreal/src/: main.py
sentient-brain-surreal/src/agents/: architect_agent.py  orchestrator.py
sentient-brain-surreal/src/models/: agent_models.py  workflow_models.py
sentient-brain-surreal/tests/: test_surreal_client.py
smithery-mcp-server/: .gitignore  AI Memory MCP Server_ Smithery-Validated Developme.md  Dockerfile  package-lock.json  package.json  smithery.config.js  smithery.yaml  tsconfig.json
smithery-mcp-server/prisma/: schema.prisma
smithery-mcp-server/scripts/: post-build.js
smithery-mcp-server/src/: index.ts
tools/: git-index.sh
(+115 files in other folders)
